# api-personal.ai

./: LICENSE  README.md  pyproject.toml
personal_ai/: personal_ai.py
