[tool.poetry]
name = "personal-ai"
version = "0.1.0"
description = "A simple python library for personal.ai's api"
authors = ["Alan Young <harleypig@harleypig.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "personal_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
